--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,13 @@
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     margin: 0;
 
     background-color: #385CA9;
+    overflow: hidden;
 }
 
 canvas {
@@ -114,4 +115,29 @@ menu button div span {
 
 menu button div span:hover {
     background: rgba(0, 0, 0, 0.5);
+}
+
+
+.repeat {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    z-index: 2;
+
+    width: 100px;
+    height: 100px;
+
+    border: 0;
+
+    background: url('../images/repeat.svg');
+
+    transition: all .5s;
+    cursor: pointer;
+}
+
+.repeat:hover {
+    transform: rotateZ(180deg);
 }
